--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
           path: ./src/${{ env.PROJECT_NAME }}/bin/Release/*.nupkg
   prerelease:
     needs: build
-    if: "github.event.release.prerelease"
+    if: github.event.release.prerelease
     runs-on: ubuntu-latest
     steps:
       - name: Download Artifact
@@ -64,8 +64,10 @@ jobs:
           done
   deploy:
     needs: build
-    if: github.event_name == 'release'
     runs-on: ubuntu-latest
+    on:
+      release:
+        types: [created]
     steps:
       - uses: actions/checkout@v2
       - name: Setup .NET Core
