--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,6 @@ jobs:
           path: ./src/${{ env.PROJECT_NAME }}/bin/Release/*.nupkg
   prerelease:
     needs: build
-    if: github.event.release.prerelease
     runs-on: ubuntu-latest
     steps:
       - name: Download Artifact
@@ -65,9 +64,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    on:
-      release:
-        types: [created]
+    if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v2
       - name: Setup .NET Core
