--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           name: nupkg
       - name: Add Github feed
-        run: dotnet nuget add source $GITHUB_FEED -n github -u pmdevers -p GH_TOKEN
+        run: dotnet nuget add source $GITHUB_FEED -n github -u pmdevers -p GH_TOKEN --store-password-in-clear-text
       - name: Push to GitHub Feed
         run: dotnet nuget push ./nupkg/*.nupkg --source "github"
   deploy:
@@ -70,7 +70,7 @@ jobs:
         with:
           dotnet-version: 3.1.301
       - name: Add Github feed
-        run: dotnet nuget add source $GITHUB_FEED -n github -u pmdevers -p GH_TOKEN
+        run: dotnet nuget add source $GITHUB_FEED -n github -u pmdevers -p GH_TOKEN --store-password-in-clear-text
       - name: Create Release NuGet package
         run: |
           arrTag=(${GITHUB_REF//\// })
