--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,8 +57,10 @@ jobs:
           name: nupkg
       - name: Add Github feed
         run: dotnet nuget add source $GITHUB_FEED -n github -u pmdevers -p GH_TOKEN --store-password-in-clear-text
-      - name: Push to GitHub Feed
-        run: dotnet nuget push ./nupkg/*.nupkg --source "github"
+      #- name: Push to GitHub Feed
+      #  run: dotnet nuget push ./nupkg/*.nupkg --source "github"
+      - name: Push to NuGet Feed
+        run: dotnet nuget push ./nupkg/*.nupkg --source $NUGET_FEED --skip-duplicate --api-key $NUGET_KEY
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -79,7 +81,7 @@ jobs:
           VERSION="${VERSION//v}"
           echo Clean Version: $VERSION
           dotnet pack -v normal -c Release --include-symbols --include-source -p:PackageVersion=$VERSION -o nupkg src/$PROJECT_NAME/$PROJECT_NAME.*proj
-      - name: Push to GitHub Feed
-        run: dotnet nuget push ./nupkg/*.nupkg ./nupkg/*.nupkg --source "github"
+      #- name: Push to GitHub Feed
+      #  run: dotnet nuget push ./nupkg/*.nupkg ./nupkg/*.nupkg --source "github"
       - name: Push to NuGet Feed
         run: dotnet nuget push ./nupkg/*.nupkg --source $NUGET_FEED --skip-duplicate --api-key $NUGET_KEY
