Disable nuget on pre release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,8 +59,8 @@ jobs:
         run: dotnet nuget add source $GITHUB_FEED -n github -u pmdevers -p GH_TOKEN --store-password-in-clear-text
       #- name: Push to GitHub Feed
       #  run: dotnet nuget push ./nupkg/*.nupkg --source "github"
-      - name: Push to NuGet Feed
-        run: dotnet nuget push ./nupkg/*.nupkg --source $NUGET_FEED --skip-duplicate --api-key $NUGET_KEY
+      #- name: Push to NuGet Feed
+      #  run: dotnet nuget push ./nupkg/*.nupkg --source $NUGET_FEED --skip-duplicate --api-key $NUGET_KEY
   deploy:
     needs: build
     runs-on: ubuntu-latest
